# Agentic-RAG-Shopping-Assistant-Multi

./: .dockerignore  .env.local  .gitignore  CLAUDE.md  Dockerfile  PLANNING.md  README.md  api.py  docker-compose.yml  findings.docx  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_run_full.json  .latest_test_run.json
eval/: results.json  run_eval.py  test_cases.py
notebooks/: test_notebook.ipynb  test_notebook_multi.ipynb
pipelines/: ingest_docs.py
scripts/: generate_architecture_diagram.py  generate_docs.py
src/: graph.py  state.py
src/agents/: escalation_agent.py  order_agent.py  rag_agent.py
src/nodes/: chitchat.py  guardrail.py  intent_router.py  rag.py  response_generator.py  tool_call.py
src/supervisor/: delegation_router.py  graph.py  state.py  synthesis.py
